# polis-protocol

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SKILL.md  install.sh  pyproject.toml  server.json
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: amendment-proposal.md  bug-report.md  config.yml  feature-request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  tests.yml
assets/: demo-source.html  social-card.html
docs/: antigravity.md  comparisons.md  main-branch-security.md  publishing-mcp-registry.md
docs/anthropic/: README.md  builders-showcase-application.md  claude-de-submission.md  devrel-dms.md  discord-posts.md  launch-tweet-mention.md
docs/launch/: README.md  checklist.md  community-pitches.md  essay.md  icp-outreach.md  show-hn-v2.md  show-hn.md  x-thread.md
editors/antigravity/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  extension.js  package.json  sample_state.json  state.js  test_state.js
editors/antigravity/media/: SKILL.md  init_polis.py  route_contract.py
editors/antigravity/media/polis/: __init__.py  _io.py  config.py  context.py  contracts.py  integrity.py  mcp_server.py  report.py  routing.py
examples/: README.md
examples/research-team/: README.md
examples/research-team/_polis/: CONSTITUTION.md  README.md  chronicle.md  index.md
polis/: __init__.py  __main__.py  amendments.py  bench.py  cli.py  context.py  contracts.py  doctor.py  guardrails.py  initializer.py  mcp_server.py  migrate.py  reflect.py  reservations.py  routing.py  serve.py
polis/_data/: SKILL.md
polis/_data/templates/: POLIS_CONSTITUTION.md  bridge_pointer.md
references/: amendments.md  protocol-spec.md  routing.md  templates.md  troubleshooting.md
scripts/: benchmark.py  benchmark.sh  demo.sh  demo_collision.sh  init_polis.py  route_contract.py  test_amendments.py  test_benchmark.py  test_context.py  test_contracts.py  test_doctor.py  test_examples.py  test_guardrails.py  test_init_polis_dry_run.py  test_integrity.py  test_lessons_routing.py  test_mcp_server.py  test_migrate.py  test_module.py  test_module_main.py  test_packaging.py  test_reconcile_parsing.py  test_reflect.py  test_reservations.py  test_serve_report.py
site/: README.md  index.html  package-lock.json  package.json
site/.openai/: hosting.json
site/app/: CopyButton.tsx  HashNavigator.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/tests/: rendered-html.test.mjs
site/worker/: index.ts
templates/: POLIS_CONSTITUTION.md
tests/: test_initializer_dry_run.py
(+22 files in other folders)
