[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polis-protocol"
version = "2.0.0a0"
description = "Local-first control plane for coding agents — assignment, evidence, and learning routing in your repo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yehuda Levy" }]
keywords = [
    "ai-agents", "multi-agent", "coding-agents", "mcp", "routing",
    "claude", "codex", "gemini", "cursor", "orchestration", "agent-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/yehudalevy-collab/polis-protocol"
Repository = "https://github.com/yehudalevy-collab/polis-protocol"
Issues = "https://github.com/yehudalevy-collab/polis-protocol/issues"

[project.scripts]
polis = "polis.cli:main"

[tool.setuptools]
packages = ["polis"]

[tool.setuptools.package-data]
polis = ["_data/SKILL.md", "_data/templates/*.md"]
