[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polis-protocol"
version = "2.0.0a2"
description = "Local-first control plane for coding agents — assignment, evidence, and learning routing in your repo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yehuda Levy" }]
keywords = [
    "ai-agents", "multi-agent", "coding-agents", "mcp", "routing",
    "claude", "codex", "gemini", "cursor", "orchestration", "agent-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["pyyaml>=6"]

[project.urls]
Homepage = "https://polis-protocol.vercel.app"
Repository = "https://github.com/yehudalevy-collab/polis-protocol"
Documentation = "https://github.com/yehudalevy-collab/polis-protocol#readme"
Issues = "https://github.com/yehudalevy-collab/polis-protocol/issues"

[project.scripts]
polis = "polis.cli:main"
# Package-name alias so `uvx polis-protocol mcp` works for MCP-registry clients
# (which invoke `uvx <pypi-identifier>`); `polis-protocol mcp` == `polis mcp`.
polis-protocol = "polis.cli:main"

[tool.setuptools]
packages = ["polis"]

[tool.setuptools.package-data]
polis = ["_data/SKILL.md", "_data/templates/*.md"]
